fix(ui): Toolbar wrap hides search. Refactor Page

--- a/ui/src/app/applications/components/applications-list/applications-list.scss
+++ b/ui/src/app/applications/components/applications-list/applications-list.scss
@@ -6,7 +6,7 @@
     &__title {
         font-weight: bolder;
         font-size: 15px;
-        color: $argo-color-gray-6;
+        color: $argo-color-gray-7;
         padding-top: 0.25em;
         padding-bottom: 0.5em;
         margin-left: 1em;
@@ -143,7 +143,7 @@
         white-space: nowrap;
         i {
             cursor: pointer;
-            color:  $argo-color-gray-4;
+            color: $argo-color-gray-4;
             margin-right: 1em;
             &::before {
                 font-size: 1.5em;
@@ -193,7 +193,7 @@
             cursor: pointer;
             &:hover {
                 color: $argo-color-gray-6;
-            }    
+            }
         }
         i.fa-times {
             cursor: pointer;
@@ -213,5 +213,49 @@
         position: absolute;
         top: 1em;
         right: 1em;
+    }
+
+    @media screen and (max-width: map-get($breakpoints, xlarge)) {
+        .page__content-wrapper {
+            min-height: calc(100vh - 3 * 50px);
+        }
+        .top-bar.row {
+            display: block;
+            .top-bar__left-side,
+            .top-bar__right-side {
+                width: 100%;
+                max-width: 100%;
+                flex: auto;
+            }
+            .top-bar__left-side {
+                .argo-button {
+                    i {
+                        @media screen and (max-width: map-get($breakpoints, large)) {
+                            margin: 0 auto !important;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    @media screen and (max-width: map-get($breakpoints, large)) {
+        .top-bar.row {
+            .top-bar__left-side {
+                > div {
+                    display: flex;
+                    justify-content: center;
+                    height: 50px;
+                    align-items: center;
+                    .argo-button {
+                        height: 34px;
+                    }
+                }
+            }
+            .top-bar__right-side {
+                display: flex;
+                justify-content: center;
+            }
+        }
     }
 }
